# internet-speed-test

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/speedtester/: speedtest.py
tests/: test_speedtester.py
