[project]
name = "internet-speed-test"
version = "0.1.0"
description = "Python CLI utility for benchmarking HTTP download speed and collecting performance statistics"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.34.2",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
target-version = ["py312"]